# buzzlit

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/app/: _transcribe_worker.py  ai_analyzer.py  caption_generator.py  config.py  downloader.py  main.py  pipeline.py  transcriber.py  video_processor.py
docs/: ARCHITECTURE.md  DEVELOPMENT_HISTORY.md  MARKET_RESEARCH.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/lib/: i18n.ts  settings.ts
